Expand account quota Limits services; align names with OCI docs
Add regions (for subscribed-region-count per console Regions), identity, database, objectstorage, file-storage, container-engine, generative-ai, data-science, dns. Remove autonomous-data-warehouse; Database/ADB limits are documented under the database service. Reference links in code comment.

Made-with: Cursor